# relmy-vibes

./: Cargo.toml  LICENSE  README.md  build.rs  meson.build  meson_options.txt  uk.bezmuth.RelmyVibes.json
data/: meson.build  uk.bezmuth.RelmyVibes.desktop.in  uk.bezmuth.RelmyVibes.gschema.xml  uk.bezmuth.RelmyVibes.metainfo.xml.in  uk.bezmuth.RelmyVibes.service.in
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: config.rs  main.rs  meson.build  saver.rs  search.rs  streamer.rs
