[package]
name = "icy-vibes"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = {version = "0.13.1", features = ["tokio","debug", "image"]}
rodio = {version = "0.20.1", features = [ "symphonia-all" ]}
serde = "1.0.219"
serde_json = "1.0.141"
stream-download = "0.22.1"
tokio = { version = "1", features = ["sync"] }
tokio-util = "0.7.15"

