[package]
name = "relmyvibes"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
gstreamer = "0.24.0"
gstreamer-audio = "0.24.0"
gstreamer-player = "0.24.0"
radiobrowser = "0.6.1"
relm4 = {version = "0.9.1", features = ["libadwaita"]}
relm4-icons = "0.10.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"

[build-dependencies]
relm4-icons-build = "0.10.0-beta.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
